# pybind-singleton

./: CMakeLists.txt  README.md  env.yml  init.py  module.py
include/: Singleton.h
src/: Singleton.cpp  binding.cpp  main.cpp
